--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@ body {
     background-color: lightgray;
 }
 
-#calculator {
-    height: 75vh;
+.calculator {
+    height: 60vh;
     width: 65vh;
     background-color: #333;
     border-radius: 8px;
@@ -11,49 +11,79 @@ body {
     margin-right: auto;
     margin-top: 8vh;
     display: flex;
-    flex-direction: column;
+    flex-direction: column;  
 }
 
 #buttons {
     display: flex;
-    flex-direction: column;
-    gap: 0.8em;
+    flex-direction: column; 
+    flex: 1; 
+    margin: 0.5em;
 }
 
 #row1 >*, #row2 >*, #row3>*, #row4>* {
-    font-size: 2rem;
-    padding: 0.1em;
+    font-size: 1.6rem;
+    flex: 1;
+    border: none;
 }
 
-#seven, #eight, #nine, #clear, #delete, #four, #five, #six, #one, #two, #three,
-     #plus, #minus, #multiply, #division {
-        width: 20%;
-        
-    }
-
-#zero, #decimal {
-    width: 30%;
-}
-
-#equals {
-    width: 40%;
+#row1 >*:hover, #row2 >*:hover, #row3>*:hover, #row4>*:hover {
+    background-color: rgb(200, 200, 200);
 }
 
 #row1, #row2, #row3, #row4 {
-display: flex;
-gap: 0.6em;
-margin: 0.2em;
-
+    display: flex;
+    gap: 0.1em;
+    margin: 0.1em;
+    flex: 1;
 }
-#screen {
+
+.screen {
     height: 20%;
     width: 90%;
-    background-color: lightskyblue;
+    background-color: rgb(175, 224, 255);
     border-radius: 4px;
     margin: 1em;
-
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 #numbers {
-    font-size: 3rem;
+    font-size: 2rem;
+    padding: 0 0.5em;
+}
+
+#memory {
+    align-self: flex-end;
+    padding: 0 1em;
+}
+
+.icons {
+    display: flex;
+    padding: 0 1em;
+}
+
+#clear, #del, #plus,#minus, #multiply, #division, #equals {
+    background-color: lightsteelblue;
+
+}
+
+#seven, #eight, #nine, #four, #five, #six, #one, #two, #three, #zero, #decimal {
+    background-color: rgb(218, 232, 250);
+
+}
+
+#iconplus, #iconminus, #icondivide, #iconmultiply {
+    opacity: 0;  
+}
+
+#iconplus.active, #iconminus.active, #icondivide.active, #iconmultiply.active {
+    opacity: 1;
+}
+
+#equals {
+    flex-basis: 13%;
 }
