--- a/style.css
+++ b/style.css
@@ -1,54 +1,144 @@
-body {
-    background-color: lightgray;
+@import url('https://fonts.googleapis.com/css2?family=Orbitron&display=swap');
+
+:root {
+    --lightGray: #C8C8C8;
+    --darkGray: #333;
+    --blueGray: lightsteelblue;
+    --whiteGray: #DAE8FA;
+    --black: #222;
+    --darkBlue: #001736;
+    --screenLight: #AFE0FF;
+    --screenDark: #00548B;
+    --blackGray: #121212;
+    --darkerGray: #181818;
 }
+
+.light-theme {
+    --fontColor: var(--black);
+    --numberButtons: var(--whiteGray);
+    --operatorButtons: var(--blueGray);
+    --bgColor: var(--lightGray);
+    --screenColor: var(--screenLight);
+    --themeSwitchColor: var(--darkGray)
+  }
+
+.dark-theme {
+    --fontColor: var(--lightGray);
+    --numberButtons: var(--darkerGray);
+    --operatorButtons: var(--darkBlue);
+    --bgColor: var(--blackGray);
+    --screenColor: var(--screenDark);
+    --themeSwitchColor: var(--blackGray); 
+  }
+
+* {
+    margin: 0;
+    padding: 0;
+    color: var(--fontColor);
+    transition: background-color 1s ease, color 1s ease;
+}
+
+body {
+    background-color: var(--bgColor);
+}
+
+.switch {
+    width: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-right: auto;
+  }
+
+.switch div {
+    position: relative;
+    display: block;
+    background: var(--blueGray);
+    width: 30px;
+    border-radius: 50px;
+    border: 1px solid black;
+    padding: 0 5px;
+    box-sizing: border-box;
+  }
+  
+.switch input {
+    display: none;
+  }
+
+.slider {
+    background-color: var(--themeSwitchColor);
+    transition: 0.4s;
+    border-radius: 34px;
+    height: 12px;
+    width: 12px;
+    display: inline-block;
+    position: relative;
+  }
+  
+input:checked + .slider {
+    transform: translateX(8px);
+  }
+
+.darkmode {
+    margin-left: auto;
+    padding: 0.5em;
+    font-family: 'Orbitron', sans-serif;
+  }
+
+.header {
+    display: flex;
+    margin-top: 3vh;
+}
+
 
 .calculator {
     height: 60vh;
-    width: 65vh;
+    width: 60vh;
     background-color: #333;
     border-radius: 8px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 8vh;
+    margin-top: 1vh;
     display: flex;
-    flex-direction: column;  
+    flex-direction: column;
+    border: 1px solid black;
+    box-shadow: 4px 4px 8px black;
 }
 
-#buttons {
+.buttons {
     display: flex;
     flex-direction: column; 
     flex: 1; 
     margin: 0.5em;
 }
 
-#row1 >*, #row2 >*, #row3>*, #row4>* {
+.row1 >*, .row2 >*, .row3>*, .row4>* {
     font-size: 1.6rem;
     flex: 1;
-    border: none;
+    border: 1px solid black;
+    border-radius: 2px;
 }
 
-#row1 >*:hover, #row2 >*:hover, #row3>*:hover, #row4>*:hover {
-    background-color: rgb(200, 200, 200);
-}
-
-#row1, #row2, #row3, #row4 {
+.row1, .row2, .row3, .row4 {
     display: flex;
-    gap: 0.1em;
+    gap: 0.15em;
     margin: 0.1em;
     flex: 1;
 }
 
 .screen {
-    height: 20%;
-    width: 90%;
-    background-color: rgb(175, 224, 255);
+    height: 21%;
+    width: 95%;
+    background-color: var(--screenColor);
     border-radius: 4px;
-    margin: 1em;
+    margin: 0.4em;
     margin-left: auto;
     margin-right: auto;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    border: 1px solid black;
+    font-family: 'Orbitron', sans-serif;
 }
 
 #numbers {
@@ -67,13 +157,11 @@ body {
 }
 
 #clear, #del, #plus,#minus, #multiply, #division, #equals {
-    background-color: lightsteelblue;
-
+    background-color: var(--operatorButtons);
 }
 
 #seven, #eight, #nine, #four, #five, #six, #one, #two, #three, #zero, #decimal {
-    background-color: rgb(218, 232, 250);
-
+    background-color: var(--numberButtons);
 }
 
 #iconplus, #iconminus, #icondivide, #iconmultiply {
@@ -85,5 +173,9 @@ body {
 }
 
 #equals {
-    flex-basis: 13%;
+    flex: 1 1 40%;
+}
+
+#zero, #decimal {
+    flex: 1 1 30%;
 }
