Add final functionality, update style with dark mode sign

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     --screenDark: #00548B;
     --blackGray: #121212;
     --darkerGray: #181818;
+    --gray: #A5A5A5;
 }
 
 .light-theme {
@@ -19,7 +20,10 @@
     --operatorButtons: var(--blueGray);
     --bgColor: var(--lightGray);
     --screenColor: var(--screenLight);
-    --themeSwitchColor: var(--darkGray)
+    --themeSwitchColor: var(--darkGray);
+    --switchBackGround: var(--blueGray);
+    --borderColor: var(--darkerGray);
+    --hoverColor: var(--gray);
   }
 
 .dark-theme {
@@ -28,14 +32,17 @@
     --operatorButtons: var(--darkBlue);
     --bgColor: var(--blackGray);
     --screenColor: var(--screenDark);
-    --themeSwitchColor: var(--blackGray); 
+    --themeSwitchColor: var(--darkerGray);
+    --switchBackGround: var(--blueGray);
+    --borderColor: var(--screenLight);
+    --hoverColor: var(--screenDark);
   }
 
 * {
     margin: 0;
     padding: 0;
     color: var(--fontColor);
-    transition: background-color 1s ease, color 1s ease;
+    transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 body {
@@ -43,20 +50,25 @@ body {
 }
 
 .switch {
-    width: 30px;
+    width: clamp(60px, 4rem, 7rem);
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     margin-right: auto;
+    cursor: pointer;
+  }
+
+.toggle {
+    box-shadow: 0 0 0.3rem var(--lightGray);
   }
 
 .switch div {
     position: relative;
     display: block;
-    background: var(--blueGray);
-    width: 30px;
+    background: var(--switchBackGround);
+    width: clamp(60px, 4rem, 7rem);
     border-radius: 50px;
-    border: 1px solid black;
+    border: 1px solid var(--borderColor);
     padding: 0 5px;
     box-sizing: border-box;
   }
@@ -69,27 +81,54 @@ body {
     background-color: var(--themeSwitchColor);
     transition: 0.4s;
     border-radius: 34px;
-    height: 12px;
-    width: 12px;
+    height: clamp(16px, 1.5rem, 2.5rem);
+    width: clamp(16px, 1.5rem, 2.5rem);
     display: inline-block;
     position: relative;
+    top: 2px;
   }
   
 input:checked + .slider {
-    transform: translateX(8px);
+    transform: translateX(30px);
   }
 
 .darkmode {
     margin-left: auto;
-    padding: 0.5em;
+    margin-right: 1rem;
+    padding: 0.125em 0.5em 0.125em 0.5em;
     font-family: 'Orbitron', sans-serif;
-  }
+    font-size: clamp(1rem, 2rem, 2.5rem);
+    text-shadow: 0 0 0.3em var(--lightGray);
+    position: relative;
+    border: 2px solid var(--lightGray);
+    border-radius: 20px;
+    box-shadow: 0 0 0.5rem var(--lightGray);  
+}
+   
+.darkmode:hover {
+    color: var(--blackGray);
+    background-color: var(--lightGray);
+    box-shadow: 0 0 3rem var(--lightGray);
+    transition-duration: 200ms;
+}
 
 .header {
     display: flex;
-    margin-top: 3vh;
+    margin-top: 8vh;
 }
 
+.darkmode::before {
+    content: '';
+    position: absolute;
+    background: rgba(200, 200, 200, 0.3);
+    top: 80%;
+    left: -18%;
+    width: 170%;
+    height: 40%;
+    transform: perspective(3em) rotateX(50deg);
+    filter: blur(0.5em);
+    z-index: 1;
+}
 
 .calculator {
     height: 60vh;
@@ -98,11 +137,12 @@ input:checked + .slider {
     border-radius: 8px;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 1vh;
+    margin-top: 5vh;
     display: flex;
     flex-direction: column;
     border: 1px solid black;
-    box-shadow: 4px 4px 8px black;
+    box-shadow: 5px -5px 8px black;
+    z-index: -1;
 }
 
 .buttons {
@@ -126,6 +166,18 @@ input:checked + .slider {
     flex: 1;
 }
 
+#seven, #eight, #nine, #clear, #del, #four, #five, #six, #plus, #minus, #one, #two,
+#three, #multiply, #division, #zero, #decimal, #equals {
+    box-shadow: -2px 2px black inset;
+}
+
+#seven:hover, #eight:hover, #nine:hover, #clear:hover, #del:hover, #four:hover,
+#five:hover, #six:hover, #plus:hover, #minus:hover, #one:hover, #two:hover,
+#three:hover, #multiply:hover, #division:hover, #zero:hover, #decimal:hover,
+#equals:hover {
+    background-color: var(--hoverColor);
+}
+
 .screen {
     height: 21%;
     width: 95%;
@@ -142,18 +194,20 @@ input:checked + .slider {
 }
 
 #numbers {
-    font-size: 2rem;
+    font-size: clamp(1.625rem, 2.5vw, 10rem);
     padding: 0 0.5em;
 }
 
 #memory {
+    font-size: clamp(1.125rem, 1.5vw, 10rem);
     align-self: flex-end;
-    padding: 0 1em;
+    padding: 0 0.75em;
 }
 
 .icons {
-    display: flex;
+    font-size: clamp(1rem, 1vw, 10rem);
     padding: 0 1em;
+    display: flex;
 }
 
 #clear, #del, #plus,#minus, #multiply, #division, #equals {
